<resources>
    <string name="app_name">Password Manager</string>
    <string name="settings">Settings</string>
    <string name="add">Add Entry</string>
    <string name="selected_entry">Selected Entry</string>
    <string name="edit_entry">Edit Entry</string>

    <!-- Settings Preferences -->
    <string name="pref_title_theme">Dark theme</string>
    <string name="pref_description_theme">Turn on dark theme</string>
    <string name="pref_title_clear">Clear Data</string>
    <string name="pref_description_clear">Delete all stored passwords in the app.</string>
    <string name="pref_title_changePIN">Change Master PIN</string>
    <string name="pref_title_about">About app</string>
    <string name="pref_none">None</string>

    <!-- Add Entry -->
    <string name="account">Account:</string>
    <string name="account_hint">myAccount@gmail.com</string>
    <string name="username">Username:</string>
    <string name="username_hint">newUsername</string>
    <string name="password">Password:</string>
    <string name="password_hint">Enter your password…</string>
    <string name="about">About</string>
    <string name="app_info">Password Manager App created by Daniel Pipkin, Damaris Pope, and Ethan Davidson</string>
    <string name="app_purpose">The goal of this app is to give the user a way to store passwords in the format of an email + password. It\'s additional functionality is to use HaveIBeenPWNED to check if an email account has been compromised through a data leak</string>

    <!-- Selected Entry -->
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save_button">Save</string>
    <string name="breached_account">Breached Account</string>

    <!-- Create PIN / Login -->
    <string name="welcome">Welcome</string>
    <string name="create_new_pin_text">Please create a new PIN to start using the app. PIN can be changed later.</string>
    <string name="create_pin">Create PIN:</string>
    <string name="pin_length_req">(PIN must be 5 digits long)</string>
    <string name="PIN_example">12345</string>
    <string name="confirm_pin">Confirm PIN:</string>
    <string name="reminder_to_remember">If you forget your PIN you will be unable to access your data.</string>
    <string name="enter_your_pin"><b>Enter your PIN</b></string>
    <string name="create_pin_button">Create PIN</string>
    <string name="open">Open</string>
    <string name="login">Login</string>
    <string name="create_pin_mani">Create PIN</string>
    <string name="don_t_have_a_pin">Don\'t have a PIN? Click here to create one!</string>
    <string name="invalid_pin">Invalid PIN</string>
    <string name="ok">OK</string>
    <string name="short_pin">PIN too short</string>
    <string name="no_match">PIN does not match</string>
    <string name="invalid_login">Invalid PIN. Try again.</string>
    <string name="warning_frag">Pin must be 5 digits.</string>

    <!-- Main Activity -->
    <string name="no_entries">No entries yet.\nTo add new Entry press \'+\' button.</string>
    <string name="breach_found">Breach Found</string>

    <!-- HIBP API KEY -->
    <string name="API_KEY">7a1756d3fa99428889c6fce797baedda</string>
    <string name="clear_data">Clear Data</string>
    <string name="reset">Reset</string>

</resources>