<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:id="@+id/account_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        style="@style/TextView"/>

    <TextView
        android:id="@+id/account_input_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Account"
        style="@style/EditText"/>

    <TextView
        android:id="@+id/username_textview"
        android:paddingTop="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        style="@style/TextView"/>

    <TextView
        android:id="@+id/username_input_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Username"
        style="@style/EditText"/>

    <TextView
        android:id="@+id/password_textview"
        android:paddingTop="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        style="@style/TextView"/>

    <TextView
        android:id="@+id/password_input_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password"
        style="@style/EditText"/>

    <LinearLayout
        android:id="@+id/breached_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:visibility="gone"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/is_pwned_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:maxWidth="40dp"
            android:src="@drawable/is_pwned_icon"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:id="@+id/breached_textview"
            android:paddingLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/breached_account"
            android:layout_gravity="center"
            style="@style/TextView"/>
    </LinearLayout>

</LinearLayout>
